<resources>
    <string name="app_name">Meowdex</string>
    <string name="search_hint">Search for your purr-fect cat&#8230;"</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>

    <string name="cat_name">Cat Name</string>
    <string name="origin">Origin</string>
    <string name="weight">Weight</string>
    <string name="kgs">kgs</string>
    <string name="life_span">Life Span</string>
    <string name="yrs">years</string>
    <string name="dog_friendliness_level">Dog Friendliness Level</string>
    <string name="level">10</string>
    <string name="temperament">Temperament: </string>
    <string name="temperaments">temperaments</string>
    <string name="description">Description: </string>
    <string name="descriptions">descriptions</string>
    <string name="read_more">READ MORE</string>



</resources>
